--- a/_config.yml
+++ b/_config.yml
@@ -87,6 +87,7 @@ defaults:
       type: posts
     values:
       layout: single
+      classes: wide
       author_profile: true
       show_date: true
       date_format: "%Y-%m-%d"
